:bento:【测试】_003_到_006_的测试用例编写和异常修复
:memo:【readme添加】添加每日连击