@@ -8,13 +8,12 @@ import java.util.Collections;
  * @since 2021/3/3
  */
 public class _004_EditCharArray {
-    private static char[] chars = "We Are Happy".toCharArray();
-
     /**
      * 将数组中的空格替换成%20,采用从尾部处理可以有效的减少数据移动次数
-     * @return  处理后的数组
+     *
+     * @return 处理后的数组
      */
-    private static char[] editChars() {
+    static char[] editChars(char[] chars) {
         int length = chars.length;
         int count = 0;
         for (int i = 0; i < length; i++) {
@@ -27,7 +26,7 @@ public class _004_EditCharArray {
 
         length += count * 2;
         //  拓宽数组
-        chars = Arrays.copyOf(_004_EditCharArray.chars, length);
+        chars = Arrays.copyOf(chars, length);
 
         int p2Index = length - 1;
         int p1Index = p2Index - count * 2;
@@ -37,24 +36,23 @@ public class _004_EditCharArray {
                 chars[p2Index] = chars[p1Index];
                 p2Index--;
             } else {
-                chars[p2Index--]='0';
-                chars[p2Index--]='2';
-                chars[p2Index--]='%';
+                chars[p2Index--] = '0';
+                chars[p2Index--] = '2';
+                chars[p2Index--] = '%';
             }
         }
         return chars;
     }
 
-    public static void main(String[] args) {
-        /*
-            Arrays.asList()知识点:
-                假数组，用于读可以，如果对数据进行改动会抛异常
-
-            如果需要将其转化成ArrayList可以使用：
-            1.  new ArrayList<>(Arrays.asList(chars));
-            2.  new ArrayList(List.of(chars));  jdk9以上支持的List类中的方法
-         */
-
-        Collections.singletonList(editChars()).forEach(System.out::print);
-    }
+//    public static void main(String[] args) {
+//        /*
+//            Arrays.asList()知识点:
+//                假数组，用于读可以，如果对数据进行改动会抛异常
+//            如果需要将其转化成ArrayList可以使用：
+//            1.  new ArrayList<>(Arrays.asList(chars));
+//            2.  new ArrayList(List.of(chars));  jdk9以上支持的List类中的方法
+//         */
+//
+//        Collections.singletonList(editChars()).forEach(System.out::print);
+//    }
 }
